# libutf

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  Makefile  NMakefile  README.md  appveyor.yml  build.bat  build.sh  clean.bat  clean.sh  config.mk  converter-test.c  converter.c  converter.cpp  converter.h  converter.hpp  ctypes.cpp  ctypes.hpp  decoder-test.c  decoder.c  decoder.cpp  decoder.h  decoder.hpp  encoder-test.c  encoder-test.cpp  encoder.c  encoder.cpp  encoder.h  encoder.hpp  error.c  error.h  libutf-config.cmake  libutf-config.cmake.in  stl.cpp  stl.hpp  utf-8-codec-test.c  utf-8-codec.c  (+12 more)
debian/: changelog  control  copyright  libutf-dev.install  libutf.install  rules
doxygen/: CMakeLists.txt  Doxyfile  Makefile  mainpage.h
examples/: CMakeLists.txt  Makefile  NMakefile  iconv.c  iconv.cpp  phi.cpp  sigma.c
include/libutf/: CMakeLists.txt  Makefile  args.h  codec.h  config.h  config.h.in  converter.h  decoder.h  encoder.h  error.h  ifstream.h  istream.h  iterator.h  libutf.h  ofstream.h  ostream.h  stream.h  string.h  types.h  utf16.h  utf32.h  utf8.h
src/: CMakeLists.txt  Makefile  args-test.c  args.c  c11-test.c  codec.c  converter-test.c  converter.c  decoder-test.c  decoder.c  encoder-test.c  encoder.c  error.c  ifstream-test.c  ifstream.c  istream.c  iterator-test.c  iterator.c  ofstream.c  ostream-test.c  ostream.c  stream.c  string-test.c  string.c  utf.def  utf16-test.c  utf16.c  utf32.c  utf8-test.c  utf8.c
testing/: UTF-16LE.txt
testing/arabic/: UTF-16BE.txt  UTF-16LE.txt  UTF-32BE.txt  UTF-32LE.txt  UTF-8.txt
testing/english/: UTF-16BE.txt  UTF-32BE.txt  UTF-32LE.txt
travis-ci/: build.bash  build.sh
